istio-files/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-service
spec:
  host: hello-service  
  subsets:
  - name: prod
    labels:
      version: prod
  - name: canary
    labels:
      version: canary
