istio-files/routing-based-on-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-service-ingress
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
  http:
  - match:
    - headers:
        end-user:
          exact: test
    route:
    - destination:
        host: hello-service
        subset: canary
  - route:
    - destination:
        host: hello-service
        subset: prod
